# slack-to-bookmark

./: .clinerc  .env.sample  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  __init__.py  check_env.py  i18n.py  mypy.ini  pyproject.toml  requirements.txt  run_mypy_check.py  security_check.py  setup.py  slack_to_bookmark.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-tests.yml
demos/: demo_channel_guide.html  demo_slack_channels.html  demo_slack_to_bookmark.py  demo_slack_users.html  demo_slack_users_bookmarks.html  demo_user_guide.html
docs/: README.md  cline_implementation_guide.md  cline_prompt_guide.md  mac_launcher_guide.md  quickstart.md  security_guidelines.md  slack_api_setup.md  testing_guide.md  windows_launcher_guide.md
docs/setup/: slack_app_permissions.md
docs/troubleshooting/: invalid_auth_resolution.md
src/: __init__.py  bookmark_generator.py  check_env.py  data_anonymizer.py  guide_generator.py  i18n.py  security_check.py  slack_client.py  slack_to_bookmark.py
src/locales/en/: messages.json
src/locales/ja/: messages.json
src/templates/: guide.html
tests/: test_slack_to_bookmark.py  test_slack_token.py
