[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slack_to_bookmark"
version = "1.0.0"
authors = [
    {name = "Slack-to-Bookmark Authors", email = "your.email@example.com"},
]
description = "SlackチャンネルやDMをChromeブックマークに変換するツール"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "slack_sdk",
    "python-dotenv",
]
keywords = ["slack", "bookmark", "chrome", "productivity", "utility"]

[project.urls]
"Bug Reports" = "https://github.com/YOUR_USERNAME/slack-to-bookmark/issues"
"Source" = "https://github.com/YOUR_USERNAME/slack-to-bookmark"
"Documentation" = "https://github.com/YOUR_USERNAME/slack-to-bookmark/tree/main/docs"

[project.scripts]
slack-to-bookmark = "src.slack_to_bookmark:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["security_check"]

[tool.setuptools.packages.find]
where = ["src"]
